teste color in section p1

--- a/index.css
+++ b/index.css
@@ -67,3 +67,7 @@ footer {
     color: rgb(164, 75, 247)
     ; /* Cor ao passar o mouse (pode personalizar) */
 }
+
+ section p1 {
+color: yellow
+ }
