--- a/Login.css
+++ b/Login.css
@@ -4,7 +4,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #000000;
+    background-color: #e9e9e9;
     margin: 0;
 }
 .container {
