--- a/index.css
+++ b/index.css
@@ -76,3 +76,20 @@ footer {
  section p1 {
 color: rgb(255, 251, 0)
  }
+
+ .btn-logout {
+    display: block;
+    margin: 10px auto 0;
+    padding: 10px 20px;
+    background-color: rgb(0, 0, 0); /* Preto */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.btn-logout:hover {
+    background-color: rgb(0, 162, 255); /* Azul claro */
+    color: black;
+}
