--- a/index.css
+++ b/index.css
@@ -85,9 +85,9 @@ color: rgb(255, 251, 0)
 
  .btn-logout {
     display: block;
-    margin: 10px auto 0;
-    padding: 10px 20px;
-    background-color: rgb(0, 0, 0); /* Preto */
+    margin: 1px auto 0;
+    padding: 7px 20px;
+    background-color: rgb(0, 0, 0);
     color: white;
     border: none;
     border-radius: 5px;
@@ -96,10 +96,88 @@ color: rgb(255, 251, 0)
 }
 
 .btn-logout:hover {
-    background-color: rgb(0, 162, 255); /* Azul claro */
+    background-color: rgb(0, 162, 255);
     color: black;
 }
 
 .countainer{
     padding: 0 40px;
+}
+
+
+.curso-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.curso-container p {
+    flex: 1;
+    margin-right: 15px;
+}
+
+.progress-container {
+    display: flex;
+    align-items: center;
+    width: 50%;
+    background-color: #e0e0e0;
+    border-radius: 25px;
+    overflow: hidden;
+}
+
+.progress-bar {
+    height: 30px;
+    background-color: #1fcf25;
+    text-align: center;
+    line-height: 30px;
+    color: white;
+    border-radius: 25px 0 0 25px;
+    transition: width 0.4s ease;
+}
+
+.progress-container span {
+    margin-left: 10px;
+    font-size: 14px;
+    color: #333;
+}
+
+.profile-menu {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    position: relative;
+}
+
+.menu-toggle {
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.menu {
+    display: none;
+    position: absolute;
+    top: 50px;
+    right: 0;
+    list-style: none;
+    margin: 0;
+    padding: 10px;
+    background-color: #000000;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+}
+
+.menu li {
+    margin: 10px 0;
+}
+
+.menu li a {
+    text-decoration: none;
+    color: white;
+    padding: 5px 10px;
+    display: block;
+}
+
+.menu li a:hover {
+    background-color: #00b7ff;
 }
