--- a/ConfiguraçõesAdmin/configurações.css
+++ b/ConfiguraçõesAdmin/configurações.css
@@ -5,8 +5,8 @@ body {
     }
     .container {
         background-color: #ffffff;
-        padding: 20px;
-        border-radius: 10px;
+        padding: 50px;
+        border-radius: 70px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         width: 300px;
     }
@@ -14,7 +14,7 @@ body {
         margin-top: 0;
     }
     .input-group {
-        margin-bottom: 15px;
+        margin-bottom: 5px;
     }
     .input-group label {
         display: block;
@@ -22,7 +22,7 @@ body {
     }
     .input-group input {
         width: 100%;
-        padding: 10px;
+        padding: 8px;
         box-sizing: border-box;
     }
     .btn {
@@ -31,7 +31,7 @@ body {
         background-color: #0c00b3;
         color: #fff;
         border: none;
-        border-radius: 5px;
+        border-radius: 10px;
         cursor: pointer;
         
     }
@@ -58,8 +58,8 @@ body {
         position: absolute;
         top: 30px;
         left: 20px;
-        background-color: #1a73e8;
-        color: #fff;
+        background-color: #030303;
+        color: #d0ff00;
         padding: 10px 20px;
         border-radius: 40px;
         text-decoration: none;
@@ -69,6 +69,6 @@ body {
     }
     
     .botao-voltar a:hover {
-        background-color: #0e8a03;
+        background-color: #1c00b8;
     }
     
