css login admin

--- a/ConfiguraçõesAdmin/configurações.css
+++ b/ConfiguraçõesAdmin/configurações.css
@@ -70,5 +70,5 @@ body {
     
     .botao-voltar a:hover {
         background-color: #1c00b8;
-    }
-    
+    } 
+    /*não consegui centralizar o box
