inserido meus contatos e mudança de background

--- a/About Fachini/index fachini.css
+++ b/About Fachini/index fachini.css
@@ -1,6 +1,6 @@
 body { 
     color: #000000;
-    background-color: white;
+    background-color: rgb(129, 124, 124);
     font-family:  Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
